# nci-parser

./: .gitignore  CHANGELOG.md  LICENSE  PERFORMANCE.md  QUICKREF.md  README.md  benchmark.py  nci_job_parser.py  output.csv  parse_nci_job_output.py  pyproject.toml  requirements.txt  setup.py
examples/: sample_job_output.txt
nci_job_parser/: __init__.py  cli.py  parser.py
nci_parser/: __init__.py  cli.py  jobs_cli.py  monitor_cli.py  parser.py  plot_cli.py  quota_cli.py  quota_parser.py
test_input/: storage-global.tsv  usage-global.tsv  usage-users.tsv
tests/: test_nci_job_parser.py
