[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nci-job-parser"
version = "0.1.0"
description = "Parse NCI job output files into tabular format"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Albert Henry"}
]

[project.scripts]
nci-job-parser = "nci_job_parser.cli:main"
