[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nci-parser"
version = "0.4.0"
description = "Parse NCI job output files into tabular format"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Albert Henry"}
]

[project.scripts]
nci-parser = "nci_parser.cli:main"
nci-job-parser = "nci_parser.jobs_cli:jobs_main"
